# Recruit

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  foldersDetails.txt  main.cpp
includes/: my_stack.h
includes/calc/: calc.h
src/: calc.cpp  matrix.cpp
test/: test.cpp
